--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "button",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://camain-elie.github.io/buttonComponent",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.1.0",
     "material-design-icons": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -18,7 +20,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sass": "sass --watch ./src/main.scss:./src/index.css",
-    "prefix": "postcss ./src/index.css --use autoprefixer -d ./src/prefixed/"
+    "prefix": "postcss ./src/index.css --use autoprefixer -d ./src/prefixed/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
